# KubananaRetroGame

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: config.h  game.h  player.h  renderer.h
src/core/: game.c
src/rendering/: renderer.c  sprites.c
